--- a/novedades/index.html
+++ b/novedades/index.html
@@ -7,37 +7,23 @@
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
   <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
   <link rel="stylesheet" type="text/css" media="all" href="assets/custom-styles.css"/>
-  <meta name="description" content="Cursos - 5a Semana de la Geofísica">
-  <title>Cursos - 5a Semana de la Geofísica</title>
+  <meta name="description" content="Novedades - 5a Semana de la Geofísica">
+  <title>Novedades - 5a Semana de la Geofísica</title>
   <style>
-    /* Small inline layout tweaks specific to this page to keep changes local */
-    .curso-grid {
+    .videos-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 18px;
-      align-items: start;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 16px;
       margin: 20px 0;
     }
-    .curso-card {
+    .video-card {
       background: #fff;
       border-radius: 8px;
-      padding: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-      text-align: center;
+      padding: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
     }
-    .curso-card img { max-width: 100%; height: auto; border-radius: 4px; }
-    .curso-title { font-weight: 700; margin-top: 8px; }
-    .back-link { margin-top: 20px; display:block; text-align:center; }
-  /* Lightbox styles */
-    #lightbox { display: none; position: fixed; inset: 0; z-index: 10000; }
-    #lightbox[aria-hidden="false"] { display: block; }
-    #lightbox-backdrop { position: fixed; inset: 0; background: rgba(0,0,0,0.75); }
-    #lightbox-content { position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); max-width: 94%; max-height: 92%; padding: 12px; box-sizing: border-box; }
-    #lightbox-content img { display: block; max-width: 100%; max-height: 80vh; margin: 0 auto; border-radius: 6px; }
-  /* hide caption text when zooming images (local and global lightboxes) */
-  #lightbox-caption, #site-lightbox-caption { display: none !important; }
-    #lightbox-close { position: absolute; right: 6px; top: 6px; background: rgba(0,0,0,0.6); color: #fff; border: none; font-size: 22px; line-height: 1; padding: 6px 10px; border-radius: 4px; cursor: pointer; }
-    #lightbox-close:focus { outline: 2px solid #fff; }
+    .video-link { word-break: break-all; color: #0a66c2; }
+    .video-title { font-weight: 700; margin-bottom: 8px; }
   </style>
 </head>
 <body>
@@ -52,58 +38,66 @@
       <td class="navigation"><a title="Conference Home Page" href="..">Inicio</a></td>
       <td class="navigation"><a title="Register for the Conference" href="../registration">Registro</a></td>
       <td class="navigation"><a title="Conference Program" href="../program">Programa</a></td>
-  <td class="navigation"><a class="current" title="Cursos" href=".">Cursos</a></td>
-  <td class="navigation"><a title="Novedades" href="../novedades">Novedades</a></td>
-      <td class="navigation"><a title="Directions to the Conference" href="../directions">Cómo llegar</a></td>
+  <td class="navigation"><a title="Cursos" href="../curso">Cursos</a></td>
+  <td class="navigation"><a class="current" title="Novedades" href=".">Novedades</a></td>
+  <td class="navigation"><a title="Directions to the Conference" href="../directions">Cómo llegar</a></td>
       <td class="navigation"><a title="Conference Flyer" href="../flyer">Contacto</a></td>
     </tr>
   </table>
 
-  <h2>Cursos</h2>
-  <p style="text-align: justify;">A continuación encuentras los cursos ofrecidos durante la 5° Semana de la Geofísica. Haz click en cada imagen para verla en tamaño completo.</p>
+  <h2>Novedades</h2>
 
-  <div class="curso-grid">
+  <div class="videos-grid">
 
-    <div class="curso-card">
-      <a class="curso-lightbox" href="assets/CURSO/CURSO_5.png"><img src="assets/CURSO/CURSO_5.png" alt="Curso 5"></a>
-      <div class="curso-title"></div>
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DOzSBQLjWuG/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
     </div>
 
-    <div class="curso-card">
-      <a class="curso-lightbox" href="assets/CURSO/CURSO_1.png"><img src="assets/CURSO/CURSO_1.png" alt="Curso 1"></a>
-      <div class="curso-title">Fundamentos de Adquisición Sísmica Terrestre</div>
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DO637BOkpnE/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
     </div>
 
-    <div class="curso-card">
-      <a class="curso-lightbox" href="assets/CURSO/CURSO_2.png"><img src="assets/CURSO/CURSO_2.png" alt="Curso 2"></a>
-      <div class="curso-title">Procesamiento de datos magnetotelúricos en el software EMPOWER</div>
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DPCMu8rkSJs/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
     </div>
 
-    <div class="curso-card">
-      <a class="curso-lightbox" href="assets/CURSO/CURSO_3.png"><img src="assets/CURSO/CURSO_3.png" alt="Curso 3"></a>
-      <div class="curso-title">Conceptos prácticos para geocientíficos en el uso de datos magnéticos y gravedad
-      </div>
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DPJp2G0Ddlc/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
     </div>
 
-    <div class="curso-card">
-      <a class="curso-lightbox" href="assets/CURSO/CURSO_4.png"><img src="assets/CURSO/CURSO_4.png" alt="Curso 4"></a>
-      <div class="curso-title">Interpretaciones Sismotécnicas</div>
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DPRH-i9jYfU/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
     </div>
 
-    
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DPh2VA9jei1/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
+    </div>
+
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DPl3VHLjT90/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
+    </div>
+
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DPl3VHLjT90/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
+    </div>
+
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DPpQSvzEpHK/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
+    </div>
+
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DP32O8ejQ2R/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
+    </div>
+
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DP89F5VDRkH/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
+    </div>
+
+    <div class="video-card">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DQCUjctjR22/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:540px; width:100%;"></blockquote>
+    </div>
+
   </div>
-
-  <!-- Lightbox / Modal -->
-  <div id="lightbox" aria-hidden="true">
-    <div id="lightbox-backdrop"></div>
-    <div id="lightbox-content" role="dialog" aria-modal="true">
-      <button id="lightbox-close" aria-label="Cerrar">×</button>
-      <img id="lightbox-image" src="" alt="" />
-      <div id="lightbox-caption"></div>
-    </div>
-  </div>
-
-  <a class="back-link" href="..">← Volver al inicio</a>
 
   <footer class="footer-enhanced">
     <div class="footer-content">
@@ -157,43 +151,10 @@
   </footer>
 
   <script src="assets/custom-scripts.js"></script>
-  <script>
-    // Lightbox behavior for curso page
-    (function(){
-      const links = document.querySelectorAll('.curso-lightbox');
-      const lightbox = document.getElementById('lightbox');
-      const lbImage = document.getElementById('lightbox-image');
-      const lbCaption = document.getElementById('lightbox-caption');
-      const lbClose = document.getElementById('lightbox-close');
-      const lbBackdrop = document.getElementById('lightbox-backdrop');
-
-      function openLightbox(href, alt){
-        lbImage.src = href;
-        lbImage.alt = alt || '';
-        lightbox.setAttribute('aria-hidden','false');
-        document.body.style.overflow = 'hidden';
-        lbClose.focus();
-      }
-
-      function closeLightbox(){
-        lightbox.setAttribute('aria-hidden','true');
-        lbImage.src = '';
-        document.body.style.overflow = '';
-      }
-
-      links.forEach(a => {
-        a.addEventListener('click', function(e){
-          e.preventDefault();
-          e.stopPropagation();
-          const href = a.getAttribute('href');
-          openLightbox(href, a.querySelector('img')?.alt);
-        });
-      });
-
-      lbClose.addEventListener('click', closeLightbox);
-      lbBackdrop.addEventListener('click', closeLightbox);
-      document.addEventListener('keydown', function(e){ if(e.key === 'Escape') closeLightbox(); });
-    })();
-  </script>
+  <!-- Instagram embed script: convierte los blockquote .instagram-media en embeds reproducibles -->
+  <script async defer src="https://www.instagram.com/embed.js"></script>
+  <noscript>
+    <p>Si no ves los reels incrustados, haz clic en los enlaces para verlos en Instagram.</p>
+  </noscript>
 </body>
 </html>
