--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <td class="navigation"><a title="Register for the Conference" href="registration">Registro</a></td>
       <td class="navigation"><a title="Conference Program" href="program">Programa</a></td>
       <td class="navigation"><a title="Cursos" href="curso">Cursos</a></td>
+  <td class="navigation"><a title="Novedades" href="novedades">Novedades</a></td>
       <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
       <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
     </tr>
