--- a/registration/index.html
+++ b/registration/index.html
@@ -31,9 +31,10 @@
   <table class="navigation">
     <tr>
     <td class="navigation"><a title="Conference Home Page" href=".">Inicio</a></td>
-    <td class="navigation"><a class="current" title="Register for the Conference" href="registration">Registro</a></td>
-    <td class="navigation"><a title="Conference Program" href="program">Programa</a></td>
-    <td class="navigation"><a title="Cursos" href="../curso">Cursos</a></td>
+  <td class="navigation"><a class="current" title="Register for the Conference" href="registration">Registro</a></td>
+  <td class="navigation"><a title="Conference Program" href="program">Programa</a></td>
+  <td class="navigation"><a title="Cursos" href="../curso">Cursos</a></td>
+  <td class="navigation"><a title="Novedades" href="../novedades">Novedades</a></td>
     <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
     <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
     </tr>
