--- a/novedades/index.html
+++ b/novedades/index.html
@@ -10,20 +10,54 @@
   <meta name="description" content="Novedades - 5a Semana de la Geofísica">
   <title>Novedades - 5a Semana de la Geofísica</title>
   <style>
+    /* Grid layout */
     .videos-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 16px;
-      margin: 20px 0;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 24px;
+      margin: 20px 0 40px;
+      align-items: start;
     }
+
+    /* Card that contains the Instagram embed */
     .video-card {
-      background: #fff;
-      border-radius: 8px;
-      padding: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: transparent;
+      border-radius: 12px;
+      padding: 6px;
+      transition: transform 220ms ease, box-shadow 220ms ease;
     }
+
+    /* Hover effect to give a subtle lift */
+    .video-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 12px 30px rgba(12, 35, 64, 0.12);
+    }
+
+    /* Make instagram embed responsive and visually contained */
+    .instagram-media {
+      border-radius: 10px !important;
+      overflow: hidden !important;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08) !important;
+      border: 1px solid rgba(0,0,0,0.04) !important;
+      width: 100% !important;
+      max-width: 720px !important;
+      background: #fff !important;
+    }
+
+    /* Remove default margins that Instagram injects so cards align nicely */
+    .instagram-media ~ .instagram-media { margin-top: 0 !important; }
+
+    /* Smaller screens: narrower max width */
+    @media (max-width: 600px) {
+      .instagram-media { max-width: 94vw !important; }
+      .videos-grid { gap: 14px; }
+    }
+
+    /* Utility (kept for potential fallback links) */
     .video-link { word-break: break-all; color: #0a66c2; }
-    .video-title { font-weight: 700; margin-bottom: 8px; }
   </style>
 </head>
 <body>
