--- a/flyer/index.html
+++ b/flyer/index.html
@@ -122,8 +122,12 @@
         </div>
         
         <div class="footer-info">
-          <p>&copy; 2024 5° Semana de la Geofísica - Universidad Industrial de Santander</p>
-        </div>
+          <p>&copy; 2025 5° Semana de la Geofísica - Universidad Industrial de Santander</p>
+           <p>Nota del proyecto: Este evento es parte de la 5a Semana de la Geofísica.</p>
+          <div class="footer-info">
+            <p>&copy; 2025 5° Semana de la Geofísica - Universidad Industrial de Santander</p>
+            <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto ct 045-2024: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
+          </div>
       </div>
     </footer>
 
