--- a/index.html
+++ b/index.html
@@ -414,18 +414,6 @@
         <div class="sponsor-email"><a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a></div>
       </td>
       <td class="sponsor">
-        <img src="assets/Paul.jpeg" alt="Paul Yesid Goyes Peñafiel">
-        <div class="sponsor-name">Paul Yesid Goyes Peñafiel</div>
-        <div class="sponsor-role">
-          <div>Geólogo</div>
-          <div>MSc en Geofísica</div>
-          <div>PhD(c) en Ciencias de la Computación</div>
-        </div>
-        <div class="sponsor-email"><a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a></div>
-      </td>
-    </tr>
-      <tr>
-        <td class="sponsor">
           <div class="sponsor-zoom"><img src="assets/Daniela.jpg" alt="Daniela Quintero"></div>
           <div class="sponsor-name">Daniela Quintero</div>
           <div class="sponsor-role">
@@ -433,6 +421,19 @@
           </div>
           <div class="sponsor-email"><a href="mailto:daniela2202434@correo.uis.edu.co">daniela2202434@correo.uis.edu.co</a></div>
         </td>
+    </tr>
+      <tr>
+        <td class="sponsor">
+        <img src="assets/Paul.jpeg" alt="Yesid Paul Goyes Peñafiel">
+        <div class="sponsor-name">Yesid Paul Goyes Peñafiel</div>
+        <div class="sponsor-role">
+          <div>Geólogo</div>
+          <div>MSc en Geofísica</div>
+          <div>PhD(c) en Ciencias de la Computación</div>
+        </div>
+        <div class="sponsor-email"><a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a></div>
+      </td>
+        
         <td class="sponsor">
           <img src="assets/LEON.jpeg" alt="León Suárez">
           <div class="sponsor-name">León Suárez</div>
@@ -568,7 +569,7 @@
       
       <div class="footer-info">
         <p>&copy; 2025 5° Semana de la Geofísica - Universidad Industrial de Santander</p>
-        <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto ct 045-2024: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
+  <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto CT 045-2024: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
       </div>
     </div>
   </footer>
