--- a/program/index.html
+++ b/program/index.html
@@ -141,7 +141,7 @@
         
         <div class="footer-info">
           <p>&copy; 2025 5° Semana de la Geofísica - Universidad Industrial de Santander</p>
-          <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto ct 045-2024: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
+          <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto CT 045-2024: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
         </div>
       </div>
     </footer>
