--- a/index.html
+++ b/index.html
@@ -85,59 +85,12 @@
     </div>
   </div>
 
-  <h3> Curso en la 5a Semana de la Geofísica 🌍✨</h3>
-  
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Fundamentos de Adquisición Sísmica Terrestre</strong><br>
-      👨‍🏫 Con el Ing. esp. Jaime Checa
-    </p>
+  <h3>Cursos</h3>
 
-    <p style="margin: 15px 0;">
-      🗓️ Viernes 7 de noviembre<br>
-      ⏰ 8 am - 12 pm<br>
-      📍 Salón por definir
-    </p>
+  <p>Hay cursos ofrecidos durante la semana — ahora encontrarás las descripciones completas en la página dedicada.</p>
+  <p><a href="curso">Ir a la página de Cursos</a></p>
 
-    <p style="margin: 15px 0;">
-      💡 Aprende sobre geometría de adquisición 3D, densidad vs fold, fuentes y receptores, y mucho más 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/curso_1.png" alt="Curso 1 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-    <div class="flyer-container">
-      <img src="assets/curso_2.png" alt="Curso 2 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Conceptos Prácticos para Geocientíficos en el Uso de Datos Magnéticos y Gravedad</strong><br>
-      👨‍🏫 Con el Ph.D. Bogdan Nitescu
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Miércoles 5 de noviembre<br>
-      ⏰ 2 - 5 pm<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Aprende sobre el uso práctico de datos magnéticos y de gravedad en geociencias 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/curso_7.png" alt="Curso 3 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-    <div class="flyer-container">
-      <img src="assets/curso_4.png" alt="Curso 4 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
+  <!-- Cursos detallados movidos a /curso -->
 
   <!-- <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
     <p style="margin: 15px 0;">
