--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <td class="navigation"><a class="current" title="Conference Home Page" href=".">Inicio</a></td>
       <td class="navigation"><a title="Register for the Conference" href="registration">Registro</a></td>
       <td class="navigation"><a title="Conference Program" href="program">Programa</a></td>
-      <td class="navigation"><a title="Cursos" href="curso">Cursos</a></td>
+  <td class="navigation"><a title="Cursos" href="curso">Cursos</a></td>
+  <td class="navigation"><a title="Charlas" href="charlas">Charlas</a></td>
   <td class="navigation"><a title="Novedades" href="novedades">Novedades</a></td>
       <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
       <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
@@ -89,243 +90,8 @@
 
   <p>Hay cursos ofrecidos durante la semana — ahora encontrarás las descripciones completas en la página dedicada.</p>
   <p><a href="curso">Ir a la página de Cursos</a></p>
-
-  <!-- Cursos detallados movidos a /curso -->
-
-  <!-- <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Conceptos de Magnetotelúrica</strong><br>
-      👨‍🏫 Con el Ing. M.Sc. Juan Camilo Herrera
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Martes 4 de noviembre<br>
-      ⏰ 3 - 5 pm<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Aprende sobre los fundamentos y aplicaciones de la magnetotelúrica 🚀
-    </p>
-  </div> -->
-
-  <!-- <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/curso_5.png" alt="Curso 5 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-    <div class="flyer-container">
-      <img src="assets/curso_6.png" alt="Curso 6 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div> -->
-
-  <h3> Charlas en la 5a Semana de la Geofísica 🎤✨</h3>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Geofísica Aplicada a la Agricultura: Herramientas, Avances y Desafíos</strong><br>
-      👩‍🏫 Con la Ph.D. Nesrine Chaali
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Viernes 7 de noviembre<br>
-      ⏰ 11 am - 12 am<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Descubre cómo la geofísica está revolucionando la agricultura moderna 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/charla_1.png" alt="Charla 1 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <!-- <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Sismología</strong><br>
-      👩‍🏫 Con la Ph.D. Viviana Dionicio
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Martes 4 de noviembre<br>
-      ⏰ 2 am - 3 am<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Explora los fundamentos y aplicaciones de la sismología 🚀
-    </p>
-  </div> -->
-
-  <!-- <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/charla_2.png" alt="Charla 2 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div> -->
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Caracterización del Área Geotérmica de Cerro Machín Mediante Integración de Resistividad (MT) y Velocidades Sísmicas 3D</strong><br>
-      👨‍🏫 Con el Ing. M.Sc. Juan Camilo Herrera
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Miércoles 5 de noviembre<br>
-      ⏰ 8 am - 9 am<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Conoce cómo se integran métodos geofísicos para caracterizar áreas geotérmicas 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/charla_3.png" alt="Charla 3 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Métodos de Gravedad y Magnéticos en la Exploración de Recursos Minerales</strong><br>
-      👨‍🏫 Con el Ph.D. Bogdan Nitescu
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Jueves 6 de noviembre<br>
-      ⏰ 8 - 9 am<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Aprende sobre la aplicación de métodos geofísicos en la exploración minera 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/curso_8.png" alt="Charla - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 GAIRA: Geología + Artificial Intelligence + Realidad Aumentada</strong><br>
-      👨‍🏫 Con el Geól. M.Sc. Sergio Andrés García
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Martes 4 de noviembre<br>
-      ⏰ 3 pm - 4 pm<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Descubre la integración de geología, inteligencia artificial y realidad aumentada 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/charla_4.png" alt="Charla GAIRA - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Redes de Monitoreo Sismológico en Colombia, Más de 30 Años Generando Nuevo Conocimiento y Aportando a la Gestión del Riesgo del País</strong><br>
-      👩‍🏫 Con la M.Sc. Viviana Dionicio
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Martes 4 de noviembre<br>
-      ⏰ 2 pm - 3 pm<br>
-      📍 Auditorio Alberto Elías Hernández
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Descubre la historia y el impacto de las redes de monitoreo sismológico en Colombia 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/charla_5.png" alt="Charla Redes de Monitoreo - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Tendencias de Data Science para el Futuro de las Geociencias y la Industria Oil & Gas</strong><br>
-      👨‍🏫 Con el Geól. M.Sc. Nilson Delgado
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Viernes 7 de noviembre<br>
-      ⏰ 1 pm - 2 pm<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Explora las tendencias de ciencia de datos en geociencias y la industria petrolera 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/charla_6.jpeg" alt="Charla Data Science - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Clustering y Proyecciones Topológicas (GMT, SOM, t-SNE) en la Caracterización de Yacimientos: Criterios, Validación y Errores Comunes</strong><br>
-      👨‍🏫 Con el Geól. M.Sc. Nilson Delgado
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Jueves 6 de noviembre<br>
-      ⏰ 3 pm - 4 pm<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Aprende sobre técnicas avanzadas de clustering y proyecciones topológicas para caracterización de yacimientos 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/charla_7.jpeg" alt="Charla Clustering - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Geofísica Aplicada a la Búsqueda de Personas Dadas por Desaparecidas</strong><br>
-      👨‍🏫 Con el Ing. M.Sc. Efraín Andrés Laverde
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Jueves 6 de noviembre<br>
-      ⏰ Hora por definir<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Conoce cómo la geofísica contribuye a la búsqueda de personas desaparecidas 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/charla_8.png" alt="Charla Geofísica Forense - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
+  <p>Las charlas tienen su propia página con el programa completo.</p>
+  <p><a href="charlas">Ir a Charlas</a></p>
 
   <h3> Salida de Campo 🌍🎒</h3>
 
