--- a/curso/index.html
+++ b/curso/index.html
@@ -53,6 +53,7 @@
       <td class="navigation"><a title="Register for the Conference" href="../registration">Registro</a></td>
       <td class="navigation"><a title="Conference Program" href="../program">Programa</a></td>
   <td class="navigation"><a class="current" title="Cursos" href=".">Cursos</a></td>
+  <td class="navigation"><a title="Charlas" href="../charlas">Charlas</a></td>
   <td class="navigation"><a title="Novedades" href="../novedades">Novedades</a></td>
       <td class="navigation"><a title="Directions to the Conference" href="../directions">Cómo llegar</a></td>
       <td class="navigation"><a title="Conference Flyer" href="../flyer">Contacto</a></td>
