--- a/directions/index.html
+++ b/directions/index.html
@@ -31,6 +31,7 @@
     <td class="navigation"><a title="Conference Program" href="program">Programa</a></td>
   <td class="navigation"><a title="Cursos" href="../curso">Cursos</a></td>
   <td class="navigation"><a title="Novedades" href="../novedades">Novedades</a></td>
+  <td class="navigation"><a title="Charlas" href="../charlas">Charlas</a></td>
   <td class="navigation"><a class="current" title="Directions to the Conference" href="directions">Cómo llegar</a></td>
     <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
     </tr>
