--- a/registration/index.html
+++ b/registration/index.html
@@ -35,6 +35,7 @@
   <td class="navigation"><a title="Conference Program" href="program">Programa</a></td>
   <td class="navigation"><a title="Cursos" href="../curso">Cursos</a></td>
   <td class="navigation"><a title="Novedades" href="../novedades">Novedades</a></td>
+  <td class="navigation"><a title="Charlas" href="../charlas">Charlas</a></td>
     <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
     <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
     </tr>
