--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
   <table class="sponsors">
     <tr>
       <td class="sponsor">
-        <img src="assets/Ana.jpeg" alt="Ana Gabriela Mantilla Dulcey">
-        <div class="sponsor-name">Ana Gabriela Mantilla Dulcey</div>
+        <img src="assets/Ana.jpeg" alt="Ana Mantilla">
+        <div class="sponsor-name">Ana Mantilla</div>
         <div class="sponsor-role">
           <div>Geóloga</div>
           <div>MSc(s) Maestría en Geofísica</div>
@@ -136,8 +136,8 @@
     </tr>
       <tr>
         <td class="sponsor">
-        <img src="assets/Paul.jpeg" alt="Yesid Paul Goyes Peñafiel">
-        <div class="sponsor-name">Yesid Paul Goyes Peñafiel</div>
+        <img src="assets/Paul.jpeg" alt="Paul Goyes">
+        <div class="sponsor-name">Paul Goyes</div>
         <div class="sponsor-role">
           <div>Geólogo</div>
           <div>MSc en Geofísica</div>
@@ -154,7 +154,7 @@
             <div>MSc en Ingeniería de Sistemas e Informática</div>
             <div>PhD(s) en Ciencias de la Computación</div>
           </div>
-          <div class="sponsor-email"><a href="mailto:">leon2238325@correo.uis.edu.co</a></div>
+          <div class="sponsor-email"><a href="mailto:leon2238325@correo.uis.edu.co">leon2238325@correo.uis.edu.co</a></div>
         </td>
       </tr>
   </table>
@@ -166,7 +166,7 @@
         <div class="sponsor-zoom"><img src="assets/Henry_Arguello.jpeg" alt="Henry Arguello"></div>
         <div class="sponsor-name">Henry Arguello</div>
         <div class="sponsor-role">
-          <div>Ingeniero Eléctrico</div>
+          <div>Ingeniero Electricista</div>
           <div>MSc en Ingeniería Eléctrica</div>
           <div>PhD en Ingeniería Eléctrica y Computación</div>
         </div>
@@ -191,8 +191,8 @@
         <div class="sponsor-zoom"><img src="assets/ANITA.jpeg" alt="Ana Gutierrez"></div>
         <div class="sponsor-name">Ana Gutierrez</div>
          <div class="sponsor-role">
-          <div>Gestión Empresarial</div>
-          <div>MSc en Direción y Gestión de Proyectos</div>
+          <div> Profesional en Gestión Empresarial </div>
+          <div>Mag. en Dirección y Gestión de Proyectos</div>
         </div>
         <div class="sponsor-email"><a href="mailto:hdsp@uis.edu.co">hdsp@uis.edu.co</a></div>
       </td>
