--- a/index.html
+++ b/index.html
@@ -121,18 +121,18 @@
         <div class="sponsor-name">Ana Mantilla</div>
         <div class="sponsor-role">
           <div>Geóloga</div>
-          <div>MSc(s) Maestría en Geofísica</div>
+          <div>Mag(s) Maestría en Geofísica</div>
         </div>
         <div class="sponsor-email"><a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a></div>
       </td>
       <td class="sponsor">
-          <div class="sponsor-zoom"><img src="assets/Daniela.jpg" alt="Daniela Quintero"></div>
-          <div class="sponsor-name">Daniela Quintero</div>
-          <div class="sponsor-role">
-            <div>Geóloga</div>
-          </div>
-          <div class="sponsor-email"><a href="mailto:daniela2202434@correo.uis.edu.co">daniela2202434@correo.uis.edu.co</a></div>
-        </td>
+        <img src="assets/Daniela.jpg" alt="Daniela Quintero">
+        <div class="sponsor-name">Daniela Quintero</div>
+        <div class="sponsor-role">
+          <div>Geóloga</div>
+        </div>
+        <div class="sponsor-email"><a href="mailto:daniela2202434@correo.uis.edu.co">daniela2202434@correo.uis.edu.co</a></div>
+      </td>
     </tr>
       <tr>
         <td class="sponsor">
@@ -151,7 +151,7 @@
           <div class="sponsor-name">León Suárez</div>
           <div class="sponsor-role">
             <div>Ingeniero Civil</div>
-            <div>MSc en Ingeniería de Sistemas e Informática</div>
+            <div>Mag. en Ingeniería de Sistemas e Informática</div>
             <div>PhD(s) en Ciencias de la Computación</div>
           </div>
           <div class="sponsor-email"><a href="mailto:leon2238325@correo.uis.edu.co">leon2238325@correo.uis.edu.co</a></div>
@@ -163,11 +163,11 @@
   <table class="sponsors">
     <tr>
       <td class="sponsor">
-        <div class="sponsor-zoom"><img src="assets/Henry_Arguello.jpeg" alt="Henry Arguello"></div>
+        <img src="assets/Henry_Arguello.jpeg" alt="Henry Arguello">
         <div class="sponsor-name">Henry Arguello</div>
         <div class="sponsor-role">
           <div>Ingeniero Electricista</div>
-          <div>MSc en Ingeniería Eléctrica</div>
+          <div>Mag. en Ingeniería Eléctrica</div>
           <div>PhD en Ingeniería Eléctrica y Computación</div>
         </div>
         <div class="sponsor-email"><a href="mailto:henarfu@uis.edu.co">henarfu@uis.edu.co</a></div>
@@ -177,7 +177,7 @@
         <div class="sponsor-name">Sait Khurama</div>
         <div class="sponsor-role">
           <div>Geólogo</div>
-          <div>MSc en Geofísica</div>
+          <div>Mag. en Geofísica</div>
         </div>
         <div class="sponsor-email"><a href="mailto:skhurama@uis.edu.co">skhurama@uis.edu.co</a></div>
       </td>
@@ -188,7 +188,7 @@
   <table class="sponsors">
     <tr>
       <td class="sponsor">
-        <div class="sponsor-zoom"><img src="assets/ANITA.jpeg" alt="Ana Gutierrez"></div>
+        <img src="assets/ANITA.jpeg" alt="Ana Gutierrez">
         <div class="sponsor-name">Ana Gutierrez</div>
          <div class="sponsor-role">
           <div> Profesional en Gestión Empresarial </div>
