--- a/registration/index.html
+++ b/registration/index.html
@@ -96,9 +96,9 @@
           </thead>
           <tbody>
             <tr><td>Recepción de resúmenes para posters</td><td>21 de octubre</td></tr>
-            <tr><td>-</td><td>-</td></tr>
-            <tr><td>-</td><td>-</td></tr>
-            <tr><td>-</td><td>-</td></tr>
+            <tr><td>Apoyo estudiantes</td><td>16 de octubre</td></tr>
+            <tr><td>IA Energy Challenge</td><td> 24 de octubre</td></tr>
+            <tr><td>Registro salida de campo</td><td> 31 de octubre</td></tr>
             <tr><td>-</td><td>-</td></tr>
             <tr><td>-</td><td>-</td></tr>
             <tr><td>-</td><td>-</td></tr>
