--- a/registration/index.html
+++ b/registration/index.html
@@ -69,18 +69,18 @@
       <div class="topics">
         <h2>Temas de Interés</h2>
         <ul>
-          <li><strong>Métodos potenciales y electromagnéticos:</strong> Avances en gravimetría, magnetometría, electromagnetismo <br>aplicado a la exploración, energías limpias y monitoreo ambiental.</li>
+          <li><strong>Métodos potenciales y electromagnéticos:</strong> Avances en gravimetría, magnetometría, electromagnetismo aplicado a la exploración, energías limpias y monitoreo ambiental.</li>
           <li><strong>Diseño de geometrías de adquisición:</strong> Estrategias de diseño en métodos sísmicos, potenciales y electromagnéticos, mediante inteligencia artificial y evaluación de la iluminación del subsuelo.</li>
-          <li><strong>Inteligencia artificial en problemas geofísicos y geológicos:</strong> Aprendizaje profundo, machine learning<br> y técnicas híbridas en problemas de exploración, modelado e interpretación.</li>
-          <li><strong>Geofísica para el recobro mejorado y almacenamiento de CO₂:</strong> Métodos de monitoreo geofísico en<br> procesos de recobro, inyección de fluidos y tecnologías de transición energética.</li>
-          <li><strong>Modelos de lenguaje natural en geociencias:</strong> Procesamiento de datos textuales, minería de literatura<br> científica y aplicaciones en gestión de conocimiento geofísico y geológico.</li>
-          <li><strong>Gestión del riesgo y de las amenazas naturales:</strong> Métodos geofísicos e integrados para prevención,<br> monitoreo y mitigación de amenazas naturales y antropogénicas.</li>
-          <li><strong>Teledetección en geología ambiental:</strong> Aplicaciones de sensores satelitales, drones y radar en gestión<br> del riesgo, recursos hídricos y geología ambiental.</li>
-          <li><strong>Teoría y aplicaciones de la inversión geofísica:</strong> Avances en algoritmos, enfoques bayesianos, inversa<br> sísmica y regularización con modelos físicos y de aprendizaje automático.</li>
-          <li><strong>Aportes en sismología:</strong> Monitoreo de sismos, caracterización de fallas activas, modelos del subsuelo,<br> riesgos sísmicos y nuevas aproximaciones de modelado.</li>
-          <li><strong>Geofísica en energías renovables y transición energética:</strong> Aplicaciones en geotermia, hidrógeno<br> subterráneo, energía eólica y solar, con énfasis en la caracterización del subsuelo y el almacenamiento.</li>
-          <li><strong>Geofísica y cambio climático:</strong> Uso de métodos geofísicos, ciencia de datos e inteligencia<br> artificial para estudiar el cambio climático.</li>
-          <li><strong>Agrogeofísica:</strong> Aplicación de métodos geofísicos al estudio de suelos, agricultura de precisión,<br> monitoreo de nutrientes y sostenibilidad agroambiental.</li>
+          <li><strong>Inteligencia artificial en problemas geofísicos y geológicos:</strong> Aprendizaje profundo, machine learning y técnicas híbridas en problemas de exploración, modelado e interpretación.</li>
+          <li><strong>Geofísica para el recobro mejorado y almacenamiento de CO₂:</strong> Métodos de monitoreo geofísico en procesos de recobro, inyección de fluidos y tecnologías de transición energética.</li>
+          <li><strong>Modelos de lenguaje natural en geociencias:</strong> Procesamiento de datos textuales, minería de literatura científica y aplicaciones en gestión de conocimiento geofísico y geológico.</li>
+          <li><strong>Gestión del riesgo y de las amenazas naturales:</strong> Métodos geofísicos e integrados para prevención, monitoreo y mitigación de amenazas naturales y antropogénicas.</li>
+          <li><strong>Teledetección en geología ambiental:</strong> Aplicaciones de sensores satelitales, drones y radar en gestión del riesgo, recursos hídricos y geología ambiental.</li>
+          <li><strong>Teoría y aplicaciones de la inversión geofísica:</strong> Avances en algoritmos, enfoques bayesianos, inversa sísmica y regularización con modelos físicos y de aprendizaje automático.</li>
+          <li><strong>Aportes en sismología:</strong> Monitoreo de sismos, caracterización de fallas activas, modelos del subsuelo, riesgos sísmicos y nuevas aproximaciones de modelado.</li>
+          <li><strong>Geofísica en energías renovables y transición energética:</strong> Aplicaciones en geotermia, hidrógeno subterráneo, energía eólica y solar, con énfasis en la caracterización del subsuelo y el almacenamiento.</li>
+          <li><strong>Geofísica y cambio climático:</strong> Uso de métodos geofísicos, ciencia de datos e inteligencia artificial para estudiar el cambio climático.</li>
+          <li><strong>Agrogeofísica:</strong> Aplicación de métodos geofísicos al estudio de suelos, agricultura de precisión, monitoreo de nutrientes y sostenibilidad agroambiental.</li>
         </ul>
       </div>
 
