--- a/directions/index.html
+++ b/directions/index.html
@@ -106,7 +106,7 @@
           </div>
         
         <div class="footer-info">
-          <p>&copy; 2025 5° Semana de la Geofísica - Universidad Industrial de Santander</p>
+          <p>&copy; 2025 5a Semana de la Geofísica - Universidad Industrial de Santander</p>
           </div>
           <div class="project-note">
             <p>Nota del proyecto: Este evento es parte de la 5° Semana de la Geofísica.</p>
