--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="sponsor-name">Ana Mantilla</div>
         <div class="sponsor-role">
           <div>Geóloga</div>
-          <div>Mag(s) Maestría en Geofísica</div>
+          <div>MSc(s) Maestría en Geofísica</div>
         </div>
         <div class="sponsor-email"><a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a></div>
       </td>
@@ -151,7 +151,7 @@
           <div class="sponsor-name">León Suárez</div>
           <div class="sponsor-role">
             <div>Ingeniero Civil</div>
-            <div>Mag. en Ingeniería de Sistemas e Informática</div>
+            <div>MSc. en Ingeniería de Sistemas e Informática</div>
             <div>PhD(s) en Ciencias de la Computación</div>
           </div>
           <div class="sponsor-email"><a href="mailto:leon2238325@correo.uis.edu.co">leon2238325@correo.uis.edu.co</a></div>
@@ -167,7 +167,7 @@
         <div class="sponsor-name">Henry Arguello</div>
         <div class="sponsor-role">
           <div>Ingeniero Electricista</div>
-          <div>Mag. en Ingeniería Eléctrica</div>
+          <div>MSc. en Ingeniería Eléctrica</div>
           <div>PhD en Ingeniería Eléctrica y Computación</div>
         </div>
         <div class="sponsor-email"><a href="mailto:henarfu@uis.edu.co">henarfu@uis.edu.co</a></div>
@@ -177,7 +177,7 @@
         <div class="sponsor-name">Sait Khurama</div>
         <div class="sponsor-role">
           <div>Geólogo</div>
-          <div>Mag. en Geofísica</div>
+          <div>MSc. en Geofísica</div>
         </div>
         <div class="sponsor-email"><a href="mailto:skhurama@uis.edu.co">skhurama@uis.edu.co</a></div>
       </td>
@@ -280,7 +280,7 @@
       </div>
       
       <div class="footer-info">
-        <p>&copy; 2025 5° Semana de la Geofísica - Universidad Industrial de Santander</p>
+        <p>&copy; 2025 5a Semana de la Geofísica - Universidad Industrial de Santander</p>
   <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto CT 045-2024: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
       </div>
     </div>
