--- a/novedades/index.html
+++ b/novedades/index.html
@@ -176,7 +176,7 @@
       </div>
       
       <div class="footer-info">
-        <p>&copy; 2025 5° Semana de la Geofísica - Universidad Industrial de Santander</p>
+        <p>&copy; 2025 5a Semana de la Geofísica - Universidad Industrial de Santander</p>
       </div>
     </div>
   </footer>
