--- a/curso/index.html
+++ b/curso/index.html
@@ -150,6 +150,67 @@
       </div>
     </div>
 
+
+
+
+
+
+
+
+    <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+      <p style="margin: 15px 0;">
+        <strong>🔹 Conceptos Prácticos para Geocientíficos en el Uso de Datos Magnéticos y Gravedad</strong><br>
+        👨‍🏫 Con el Ph.D. Bogdan Nitescu
+      </p>
+
+      <p style="margin: 15px 0;">
+        🗓️ Miércoles 5 de noviembre<br>
+        ⏰ 2 - 5 pm<br>
+        📍 Salón por definir
+      </p>
+
+      <p style="margin: 15px 0;">
+        💡 Aprende sobre el uso práctico de datos magnéticos y de gravedad en geociencias 🚀
+      </p>
+    </div>
+
+    <div class="flyers-section">
+      <div class="flyer-container">
+        <img src="assets/nuevos_cursos/0_0.jpg" alt="Curso 3 - 5° Semana de la Geofísica" class="flyer-image">
+      </div>
+      <div class="flyer-container">
+        <img src="assets/nuevos_cursos/0_1.jpg" alt="Curso 4 - 5° Semana de la Geofísica" class="flyer-image">
+      </div>
+    </div>
+
+
+
+    <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+      <p style="margin: 15px 0;">
+        <strong>🔹 Conceptos Prácticos para Geocientíficos en el Uso de Datos Magnéticos y Gravedad</strong><br>
+        👨‍🏫 Con el Ph.D. Bogdan Nitescu
+      </p>
+
+      <p style="margin: 15px 0;">
+        🗓️ Miércoles 5 de noviembre<br>
+        ⏰ 2 - 5 pm<br>
+        📍 Salón por definir
+      </p>
+
+      <p style="margin: 15px 0;">
+        💡 Aprende sobre el uso práctico de datos magnéticos y de gravedad en geociencias 🚀
+      </p>
+    </div>
+
+    <div class="flyers-section">
+      <div class="flyer-container">
+        <img src="assets/nuevos_cursos/1_0.jpg" alt="Curso 3 - 5° Semana de la Geofísica" class="flyer-image">
+      </div>
+      <div class="flyer-container">
+        <img src="assets/nuevos_cursos/1_1.jpg" alt="Curso 4 - 5° Semana de la Geofísica" class="flyer-image">
+      </div>
+    </div>
+
   </section>
 
   <!-- Lightbox / Modal -->
@@ -211,7 +272,7 @@
       
       <div class="footer-info">
         <p>&copy; 2025 5a Semana de la Geofísica - Universidad Industrial de Santander</p>
-  <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto CT 045-2024: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
+  <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto CT 045-2025: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
       </div>
     </div>
   </footer>
