--- a/directions/index.html
+++ b/directions/index.html
@@ -107,11 +107,8 @@
         
         <div class="footer-info">
           <p>&copy; 2025 5a Semana de la Geofísica - Universidad Industrial de Santander</p>
-          </div>
-          <div class="project-note">
-            <p>Nota del proyecto: Este evento es parte de la 5° Semana de la Geofísica.</p>
-          </div>
-      </div>
+          <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto CT 045-2025: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
+        </div>
     </footer>
 
   <script src="assets/custom-scripts.js"></script>
