--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
     </tr>
     <tr>
       <td class="sponsor">
-        <img src="assets/SIGAC.svg" alt="Semillero de Investigacion SIGAC">
-        <div class="sponsor-name">Semillero de Investigacion SIGAC</div>
+        <img src="assets/SIGAC.svg" alt="Semillero de Investigación SIGAC">
+        <div class="sponsor-name">Semillero de Investigación SIGAC</div>
       </td>
       <td class="sponsor">
         <img src="assets/gidco-logo-hd.png" alt="GIDCO">
@@ -281,7 +281,7 @@
       
       <div class="footer-info">
         <p>&copy; 2025 5a Semana de la Geofísica - Universidad Industrial de Santander</p>
-  <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto CT 045-2024: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
+  <p class="project-note" style="font-size:0.9em; margin-top:8px;">Este evento hace parte de los productos de apropiación social del conocimiento del proyecto CT 045-2025: Nuevas Tecnologías Computacionales para el Procesamiento e Inversión Conjunta de Gravimetría, Magnetometría y Magnetotelúrica mediante Aprendizaje Profundo Guiado por Principios Físicos para la Caracterización Multicriterio.</p>
       </div>
     </div>
   </footer>
